--- a/civictechprojects/static/css/partials/_SubHeader.scss
+++ b/civictechprojects/static/css/partials/_SubHeader.scss
@@ -1,4 +1,4 @@
-.SubHeader-createProject { 
+.SubHeader-createProject {
   background-color: $color-orange;
   border: none;
   border-radius: 5px;
@@ -18,7 +18,7 @@
   background-color: $color-background-dark;
   height: 150px;
   padding: 0 5% 0 5%;
-  margin-bottom: 5%;
+  margin-bottom: 25px;
 }
 
 .SubHeader-sectionButton {
@@ -30,7 +30,7 @@
 }
 
 .SubHeader-rightContent {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -41,7 +41,7 @@
 
 .SubHeader-leftContent {
     float: left;
-    display: flex; 
+    display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
@@ -60,7 +60,7 @@
   }
 
   .SubHeader-leftContent {
-    flex-direction: row;    
+    flex-direction: row;
     width: 100%;
     height: 50%;
   }
@@ -68,7 +68,7 @@
 
 @include media-breakpoint-up(md) {
   .SubHeader-createProject {
-    float: right;    
+    float: right;
   }
 
   .SubHeader-root {
@@ -76,7 +76,7 @@
   }
 
   .SubHeader-sectionButton {
-    margin-top: 18px;    
+    margin-top: 18px;
   }
 
   .SubHeader-rightContent {
@@ -89,7 +89,7 @@
     width: 81%;
     height: 100%;
     float: left;
-    justify-content: flex-start;        
+    justify-content: flex-start;
   }
 
 }
